--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -24,11 +24,18 @@
           <h5>Test Subject ID No.:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
-        <div class="panel panel-primary">
+        <div class="panel panel-primary" width="100">
           <div class="panel-heading">
-            <h3 class="panel-title">Demographic Info</h3>
+            <h3 class="panel-title" >Demographic Info</h3>
           </div>
           <div id="sample-metadata" class="panel-body"></div>
+            <p id="metadata-id">ID: <span></span></p>
+            <p id="metadata-ethnicity">Ethnicity: <span></span></p>
+            <p id="metadata-gender">Gender: <span></span></p>
+            <p id="metadata-age">Age: <span></span></p>
+            <p id="metadata-location">Location: <span></span></p>
+            <p id="metadata-bbtype">BBType: <span></span></p>
+            <p id="metadata-wfreq">WFreq: <span></span></p>
         </div>
       </div>
       <div class="col-md-5">
