--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -24,7 +24,7 @@
           <h5>Test Subject ID No.:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
-        <div class="panel panel-primary" width="100">
+        <div class="panel panel-primary">
           <div class="panel-heading">
             <h3 class="panel-title" >Demographic Info</h3>
           </div>
@@ -38,7 +38,7 @@
             <p id="metadata-wfreq">WFreq: <span></span></p>
         </div>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-10">
         <div id="bar"></div>
       </div>
       <div class="col-md-5">
